--- a/Pages/Doador/indexDoador.html
+++ b/Pages/Doador/indexDoador.html
@@ -98,16 +98,14 @@
             <td>Pedro Joaquim da Silva</td>
             <td>Excel Avançado</td>
             <td>PUC Minas</td>
-            <td><button type="button" class="btn text-center btn-primary" data-toggle="modal"
-                data-target=".bd-example-modal-lg">Doar agora</button></td>
+            <td class="text-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#doeAgora">Doar</button></td>
           </tr>
           <tr>
               <td>3</td>
               <td>Maria Joaquim da Silva</td>
               <td>Excel Avançado</td>
               <td>Una</td>
-              <td><button type="button" class="btn text-center btn-primary" data-toggle="modal"
-                  data-target=".bd-example-modal-lg">Doar agora</button></td>
+              <td class="text-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#doeAgora">Doar</button></td>
             </tr>
         </tbody>
       </table>
@@ -159,6 +157,91 @@
     </div>
   </div>
 
+  <!-- Modal Doe-->
+<div class="modal fade bd-example-modal-lg" id="doeAgora" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Doar</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="row">
+          <div class="col-md-12 mb-3">
+            <label>Benificiado</label>
+            <input type="text" class="form-control" readonly/>
+          </div>
+          <div class="col-md-12 mb-3">
+            <label for="nomeInstituicao">Nome</label>
+            <input type="text" class="form-control" id="nome" name="nomeDoador" placeholder="Digite seu nome completo"
+              required>
+            <div class="valid-feedback">
+              Parece bom!
+            </div>
+            <div class="invalid-feedback">
+              Digite seu nome completo.
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="conta">Conta</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupPrepend">CC</span>
+              </div>
+              <input type="text" class="form-control" id="conta" name="conta" aria-describedby="inputGroupPrepend"
+                required>
+              <div class="valid-feedback">
+                Parece bom!
+              </div>
+              <div class="invalid-feedback">
+                Digite a conta bancária.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="agencia">Agência</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupPrepend">Ag</span>
+              </div>
+              <input type="text" class="form-control" id="agencia" name="agencia" aria-describedby="inputGroupPrepend"
+                required>
+              <div class="valid-feedback">
+                Parece bom!
+              </div>
+              <div class="invalid-feedback">
+                Digite a agência bancária.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="validationCustom02">Valor da doação</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupPrepend">R$</span>
+              </div>
+              <input type="text" class="form-control" id="valor" name="valor" aria-describedby="inputGroupPrepend"
+                required>
+              <div class="valid-feedback">
+                Parece bom!
+              </div>
+              <div class="invalid-feedback">
+                Digite a Valor.
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary">Enviar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   <!-- Bootstrap core JavaScript-->
   <script src="../../vendor/jquery/jquery.min.js"></script>
   <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -179,47 +262,6 @@
   <script src="../../js/demo/chart-area-demo.js"></script>
 
   <!-- Configuração do DataTable -->
-
-  <script>
-    $(document).ready(function () {
-        var table = $('#dataTable').DataTable({
-            "lengthMenu": [[10, 20, 25, 50, 100, -1], [10, 20, 25, 50, 100, "Todos"]],
-            "language": {
-                "sEmptyTable": "Nenhum jovem encontrado",
-                "sInfo": "Mostrando de _START_ até _END_ de _TOTAL_ jovens",
-                "sInfoEmpty": "Mostrando 0 até 0 de 0 jovens",
-                "sInfoFiltered": "(Filtrados de _MAX_ jovens)",
-                "sInfoPostFix": "",
-                "sInfoThousands": ".",
-                "sLengthMenu": "Exibir _MENU_ resultados por página",
-                "sLoadingRecords": "Carregando...",
-                "sProcessing": "Processando...",
-                "sZeroRecords": "Nenhum jovem encontrado",
-                "sSearch": "<b>Pesquisar nos resultados:</b>",
-                "oPaginate": {
-                    "sNext": "Próximo",
-                    "sPrevious": "Anterior",
-                    "sFirst": "Primeiro",
-                    "sLast": "Último"
-                },
-                "oAria": {
-                    "sSortAscending": ": Ordenar colunas de forma ascendente",
-                    "sSortDescending": ": Ordenar colunas de forma descendente"
-                },
-                buttons: {
-                    colvis: 'Exibir/Ocultar'
-                }
-            },
-            "order": [[2, 'asc']],
-            colReorder: true,
-            stateSave: true,
-            dom: '<"row"<"col-sm-2"B><"col-sm-5"l>f>t<"row text-left"<"col-sm-5"i><"col-sm-6"p>r>',
-            buttons: [{
-                extend: 'colvis'
-            }]
-        });
-    });
-</script>
 
 </body>
 
